# HamiltonianLQCD

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  INSTALL.md  Makefile  README.md  params.in
docs/: DEVELOPER_GUIDE.md  PHYSICS.md  README.md  SUMMARY.md  THEORY.md  USAGE_GUIDE.md
examples/: hexagonal_test.inp  small_test.inp  su3_test.inp
input/: parameters.inp
lattice_qcd/: IMPLEMENTATION_SUMMARY.md  Makefile  README.md  run_test.sh
lattice_qcd/input/: parameters.inp  parameters_hexagonal_2d.inp
lattice_qcd/src/: fermion_module.f90  gauge_field_module.f90  hamiltonian_module.f90  lattice_module.f90  main.f90  parallel_module.f90  parameter_module.f90  quantum_computer_module.f90  tensor_network_module.f90  time_evolution_module.f90
python/: qc_adapter.py  tn_adapter.py
src/: CMakeLists.txt  fermion_staggered.f90  fermion_wilson.f90  gauge_field.f90  hamiltonian.f90  kinds.f90  lattice_geometry.f90  main.f90  parallel_env.f90  params.f90  sun_group.f90
src/fermions/: staggered_fermion_mod.f90  wilson_fermion_mod.f90
src/gauge/: hamiltonian_mod.f90  su_n_mod.f90
src/lattice/: lattice_mod.f90
src/modules/: mod_gauge_field.f90  mod_hamiltonian.f90  mod_lattice.f90  mod_parallel.f90  mod_parameters.f90  mod_quantum_interface.f90  mod_staggered_fermion.f90  mod_su_algebra.f90  mod_tensor_network.f90  mod_time_evolution.f90  mod_wilson_fermion.f90  parameters_mod.f90
src/parallel/: mpi_mod.f90  openmp_mod.f90
src/time_evolution/: time_evolution_mod.f90
tools/: plot_results.py
